# Assistant

./: .gitignore  README.md  requirements-train.txt
backend/: pom.xml
deploy/linux/: autostart.sh  build.sh  common.sh  install-cron.sh  restart.sh  setup-server.sh  start-backend.sh  start-frontend.sh  start.sh  status.sh  stop.sh
docs/plans/: 2026-04-12-rknn-package-converter-design.md  2026-04-12-yolo-quick-start-design.md  2026-04-18-quickstart-autolabel-design.md
frontend/: index.html  package-lock.json  package.json  spa_server.py  vite.config.js
frontend/src/: App.vue  api.js  main.js  router.js  styles.css
frontend/src/components/: EmptyState.vue  PageHeader.vue  SidebarNav.vue  StatCard.vue
frontend/src/composables/: useAsyncState.js
frontend/src/views/: DashboardPage.vue  DatasetsPage.vue  DatasourcesPage.vue  DocumentsPage.vue  (+7 more)
tools/rknn-package-converter/: .gitignore  README.md  manifest.example.json  pyproject.toml
tools/rknn-package-converter/deploy/linux/: common.sh  install-cron.sh  restart.sh  setup-server.sh  start.sh  status.sh  stop.sh
tools/rknn-package-converter/src/rknn_package_converter/: __init__.py  cli.py  gemma_review.py  models.py  packager.py  webapp.py  workflow.py
tools/rknn-package-converter/tests/: test_build.py  test_service.py
tools/rknn-package-converter/tests/fixtures/artifacts/: fire_smoke.rknn  nn_server
tools/rknn-package-converter/tests/fixtures/template_m1/: base.json  nn.extend.json  nn.json
tools/rknn-package-converter/tests/fixtures/template_m31/: base.json  nn.extend.json  nn.json  nn_server
(+24 files in other folders)
