[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rknn-package-converter"
version = "0.1.0"
description = "Standalone converter for packaging trained RKNN algorithms into vendor template bundles."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
rknn-package-converter = "rknn_package_converter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
